added unit test for user routes & auth route using shai & mocha
